Creating the function that adds the patient details

--- a/healthAnalysis/health_analysis.css
+++ b/healthAnalysis/health_analysis.css
@@ -64,7 +64,7 @@ button {
 }
 
 button:hover {
-  background-color: #45a049;
+  background-color: #45a0499b;
 }
 
 /* Basic CSS for the report section */
